crates/call_chain/tests/snapshots/base__call_chain_if_condition.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ClassOrVariable {
        name: "b",
        range: AstRange {
            start: AstPoint { 4:17 },
            end: AstPoint { 4:18 },
        },
    },
]
