crates/call_chain/tests/snapshots/base__call_chain_method_a.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ClassOrVariable {
        name: "local",
        range: AstRange {
            start: AstPoint { 8:17 },
            end: AstPoint { 8:22 },
        },
    },
    MethodCall {
        name: "concat",
        range: AstRange {
            start: AstPoint { 8:23 },
            end: AstPoint { 8:29 },
        },
        args: [
            [
                Class {
                    name: "String",
                    range: AstRange {
                        start: AstPoint { 8:35 },
                        end: AstPoint { 8:30 },
                    },
                },
            ],
        ],
    },
]
