crates/call_chain/tests/snapshots/base__call_chain_method_base.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ClassOrVariable {
        name: "a",
        range: AstRange {
            start: AstPoint { 5:8 },
            end: AstPoint { 5:9 },
        },
    },
    MethodCall {
        name: "concat",
        range: AstRange {
            start: AstPoint { 5:10 },
            end: AstPoint { 5:16 },
        },
    },
]
