crates/call_chain/tests/snapshots/base__call_chain_method_field.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ClassOrVariable {
        name: "local",
        range: AstRange {
            start: AstPoint { 5:17 },
            end: AstPoint { 5:22 },
        },
    },
    MethodCall {
        name: "a",
        range: AstRange {
            start: AstPoint { 5:23 },
            end: AstPoint { 5:24 },
        },
        args: [],
    },
    FieldAccess {
        name: "b",
        range: AstRange {
            start: AstPoint { 5:27 },
            end: AstPoint { 5:28 },
        },
    },
]
