crates/call_chain/tests/snapshots/base__call_chain_method_info.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ClassOrVariable {
        name: "a",
        range: AstRange {
            start: AstPoint { 4:8 },
            end: AstPoint { 4:9 },
        },
    },
    MethodCall {
        name: "concat",
        range: AstRange {
            start: AstPoint { 4:10 },
            end: AstPoint { 4:16 },
        },
    },
    MethodCall {
        name: "other",
        range: AstRange {
            start: AstPoint { 4:21 },
            end: AstPoint { 4:26 },
        },
    },
]
