crates/call_chain/tests/snapshots/base__call_chain_new_instance_base.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    Class {
        name: "String",
        range: AstRange {
            start: AstPoint { 4:8 },
            end: AstPoint { 4:20 },
        },
    },
]
