crates/call_chain/tests/snapshots/base__call_chain_new_instance_field.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    Class {
        name: "String",
        range: AstRange {
            start: AstPoint { 4:8 },
            end: AstPoint { 4:20 },
        },
    },
    FieldAccess {
        name: "a",
        range: AstRange {
            start: AstPoint { 4:21 },
            end: AstPoint { 4:22 },
        },
    },
]
