crates/call_chain/tests/snapshots/base__call_chain_semicolon_method.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ClassOrVariable {
        name: "local",
        range: AstRange {
            start: AstPoint { 5:16 },
            end: AstPoint { 5:21 },
        },
    },
    FieldAccess {
        name: "a",
        range: AstRange {
            start: AstPoint { 5:22 },
            end: AstPoint { 5:23 },
        },
    },
    MethodCall {
        name: "c",
        range: AstRange {
            start: AstPoint { 5:24 },
            end: AstPoint { 5:25 },
        },
    },
]
