crates/call_chain/tests/snapshots/base__call_chain_semicolon_simple.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ClassOrVariable {
        name: "local",
        range: AstRange {
            start: AstPoint { 5:17 },
            end: AstPoint { 5:22 },
        },
    },
]
