crates/call_chain/tests/snapshots/base__call_chain_statement.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    ClassOrVariable {
        name: "local",
        range: AstRange {
            start: AstPoint { 5:8 },
            end: AstPoint { 5:13 },
        },
    },
    FieldAccess {
        name: "a",
        range: AstRange {
            start: AstPoint { 5:14 },
            end: AstPoint { 5:15 },
        },
    },
    MethodCall {
        name: "c",
        range: AstRange {
            start: AstPoint { 5:16 },
            end: AstPoint { 5:17 },
        },
    },
]
