crates/call_chain/tests/snapshots/base__call_chain_string.snap
---
source: crates/call_chain/tests/base.rs
expression: out
---
[
    Class {
        name: "String",
        range: AstRange {
            start: AstPoint { 5:16 },
            end: AstPoint { 5:14 },
        },
    },
]
